Fix date spacing

--- a/frontend/src/stylesheets/debrief.css
+++ b/frontend/src/stylesheets/debrief.css
@@ -61,7 +61,7 @@
 }
 
 #edit-date-input {
-    margin-left: 150px;
+    margin-left: 160px;
 }
 
 .edit-modal-title {
